edit new file,last page, added form, unordered list, page links

--- a/aboutproject.html
+++ b/aboutproject.html
@@ -58,5 +58,7 @@
     </tr>
   </table><hr>
   </content>
+  <a href="./projectindex.html">Main</a><br>
+  <a href="./lastpage.html">This or That</a>
 </body>
 </html>
