--- a/projectindex.html
+++ b/projectindex.html
@@ -11,7 +11,8 @@
   <img src="https://m.media-amazon.com/images/M/MV5BMGU1OWFjNGMtZTVkNS00NDcxLWI0YmEtMDgxYjBmMDdlNTRkXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_.jpg"
   width="200"><br>
 <nav id="nav">
-  <a href="./aboutproject.html" target="_blank">Home Page</a>
+  <a href="./aboutproject.html" target="_blank">Home Page</a><br>
+  <a href="./lastpage.html" target="_blank">This or That</a><br>
 </nav>
 </body>
 </html>
